--- a/index.html
+++ b/index.html
@@ -3,45 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel='stylesheet' type='text/css' href='style.css'>
   <title>Carlos Mega Currículo</title>
 </head>
 <body>
 
-<section>
-  <h1>Carlos Mega</h1>
-  <h4>FRONT-END DEVELOPER & UX/UI DESIGN</h4>
+  <header class='menu-bg'>
+		<div class='menu'>
+			<div class='menu-logo'>
+				<a href="#">Carlos Mega</a>
+			</div>
+			<nav class='menu-nav'>
+				<ul>
+					<li><a href='#sobre'>Início</a></li>
+					<li><a href='#produtos'>Sobre</a></li>
+					<li><a href='#preco'>Portfólio</a></li>
+					<li><a href='#qualidade'>Contato</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+<section class='resume' id='dados'>
+  <div class='resume-nome'>
+      <h1>Carlos Mega</h1>
+      <h2>FRONT-END DEVELOPER & UX/UI DESIGN</h2>
+      <h3>Desenvolvendo sites na web e sistemas, focados na simplicidade de resolver problemas e com boa usabilidade do usuário.</h3>
+    <a href="#">Portfólio</a>
+    <a href="#">Github</a>
+  </div>
 </section> 
 
-<section> 
+<section class='sobre'> 
+    <p>Me chamo Carlos Mega, atualmente cursando Analise e Desenvolvimento de       Sistemas, especializando-se desenvolvimento Front-End e UX/UI Design.</p>
+
+    <p>Considero ao longo desses anos minhas competências de análise, criatividade e comunicação pontos fortes em mim, pois me impulsionam e desenvolvem nas atividades que desempenho.</p>
+
+    <p>A tecnologia têm um horizonte muito grande para crescer em todos os setores, me cativou a estudar sobre o assunto de forma mais aprofundada e suas aplicabilidades. Com isso estou realizando a faculdade de Análise e Desenvolvimento de Sistema e na realização de cursos específicos para compreender essas transformações constantes.</p>
+
+    <p>Criando códigos, interfaces e as possibilidades que podemos aplicar em diferentes cenários do nosso dia a dia. Pela busca da simplificação de processos, na boa usabilidade em fazer diferente e resolver problemas.</p>
+</section>
+
+<section class='tecnologia'> 
   <div>
-    <ul>
-      <li> Formação Acadêmica </li>
-      <li> Experiência </li>
-      <li> Linkedin </li>
-      <li> Portfólio </li>
-      <li> Skills </li>
-      <li> Tecnologias </li>
-      <li> Idiomas </li>
-      <li> Cursos </li>
-      <li> Informações Complementares </li>
-    </ul>
-</div>
+  <ul>
+      <li>Java Script</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Flexbox</li>
+      <li>Wordpress</li>
+      <li>PHP</li>
+      <li>Git/GitHub</li>
+      <li>Figma</li>
+  </ul>
+  </div>
 </section>
 
-  <p>Desenvolvendo sites na web e sistemas, focados na simplicidade de resolver problemas e com boa usabilidade do usuário.</p>
-
-  <p>Seguem abaixo algumas dos meus projetos criados:</p>
-
-  <section>        <!-- imagem e texto ao lado -->
-    <div>
-
+<section class='portfolio'> 
+  <div class='portfolio-sub'>
+    <h1>FlexBlog</h1>
+    <div class='portfolio-img'>
+    <img  src='img/' alt='FlexBlog'>
+    <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
     </div>
-  </section>
+  </div>
 
 
+  <div class='portfolio-sub'>
+    <h1>Site Curriculo</h1>
+    <div class='portfolio-img'>
+    <img  src='img/' alt='Curriculo'>
+    <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
+    </div>
+  </div>
 
-<section>
-  
+  <div class='portfolio-sub'>
+    <h1>Bikcraft</h1>
+    <div class='portfolio-img'>
+    <img  src='img/' alt='Bikcraft'>
+    <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
+   </div>
+  </div>
+
 </section>
+  
 </body>
 </html>
