--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <div class='portfolio-sub'>
     <h1>FlexBlog</h1>
     <div class='portfolio-img'>
-    <img  src='img/' alt='FlexBlog'>
-    <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
+      <img  src='img/' alt='FlexBlog'>
+      <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
     </div>
   </div>
 
@@ -72,20 +72,38 @@
   <div class='portfolio-sub'>
     <h1>Site Curriculo</h1>
     <div class='portfolio-img'>
-    <img  src='img/' alt='Curriculo'>
-    <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
+      <img  src='img/' alt='Curriculo'>
+      <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
     </div>
   </div>
 
   <div class='portfolio-sub'>
     <h1>Bikcraft</h1>
     <div class='portfolio-img'>
-    <img  src='img/' alt='Bikcraft'>
-    <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
+      <img  src='img/' alt='Bikcraft'>
+      <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
    </div>
   </div>
 
 </section>
   
+<section class='contato'>
+  <div class='contato-info'>
+  <h1>Contato</h1>
+    <p> Entre em contato.</p>
+    <ul> <!-- whats,linkedin,git -->
+      <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"></a></li>
+      <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"></a></li>
+      <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"></a></li>
+    </ul>
+  </div>
+
+</section>
+
+
+<footer class='footer'>
+  <p>FlexBlog © Todos os direitos reservados</p>
+</footer>
+
 </body>
 </html>
