--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
   <h1>Contato</h1>
     <p> Entre em contato.</p>
     <ul> <!-- whats,linkedin,git -->
-      <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"></a></li>
-      <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"></a></li>
-      <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"></a></li>
+      <span> <a href="http://api.whatsapp.com/send?phone=5521983918686&text=0l%c3%A1!" target="_blank"><img src="img/redes-sociais/whatsapp.svg"> 
+      </span>
+      <span><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"></span>
+      <span><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"></span>
     </ul>
   </div>
 
