--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700" rel='stylesheet'>
   <link rel='stylesheet' type='text/css' href='style.css'>
   <title>Carlos Mega Currículo</title>
 </head>
@@ -11,7 +12,7 @@
   <header class='menu-bg'>
 		<div class='menu'>
 			<div class='menu-logo'>
-				<a href="#">Carlos Mega</a>
+				<a href="#">C.M. Codes</a>
 			</div>
 			<nav class='menu-nav'>
 				<ul>
@@ -28,21 +29,24 @@
   <div class='resume-nome'>
       <h1>Carlos Mega</h1>
       <h2>FRONT-END DEVELOPER & UX/UI DESIGN</h2>
-      <h3>Desenvolvendo sites na web e sistemas, focados na simplicidade de resolver problemas e com boa usabilidade do usuário.</h3>
+      <h3>Desenvolvendo sites na web e sistemas,<br> focados na simplicidade de resolver problemas <br>e com boa usabilidade do usuário.</h3>
     <a href="#">Portfólio</a>
     <a href="#">Github</a>
   </div>
+
+ <!--  <div class='sobre-img'>
+    <img  src='img/sobre1.jpg' alt='Sobre 1'>
+  </div> -->
+
 </section> 
 
-<section class='sobre'> 
+<!-- <section class='sobre'> 
     <p>Me chamo Carlos Mega, atualmente cursando Analise e Desenvolvimento de       Sistemas, especializando-se desenvolvimento Front-End e UX/UI Design.</p>
-
-    <p>Considero ao longo desses anos minhas competências de análise, criatividade e comunicação pontos fortes em mim, pois me impulsionam e desenvolvem nas atividades que desempenho.</p>
 
     <p>A tecnologia têm um horizonte muito grande para crescer em todos os setores, me cativou a estudar sobre o assunto de forma mais aprofundada e suas aplicabilidades. Com isso estou realizando a faculdade de Análise e Desenvolvimento de Sistema e na realização de cursos específicos para compreender essas transformações constantes.</p>
 
     <p>Criando códigos, interfaces e as possibilidades que podemos aplicar em diferentes cenários do nosso dia a dia. Pela busca da simplificação de processos, na boa usabilidade em fazer diferente e resolver problemas.</p>
-</section>
+</section> -->
 
 <section class='tecnologia'> 
   <div>
