--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			</div>
 			<nav class='menu-nav'>
 				<ul>
-					<li><a href='#sobre'>Início</a></li>
-					<li><a href='#produtos'>Sobre</a></li>
-					<li><a href='#preco'>Portfólio</a></li>
-					<li><a href='#qualidade'>Contato</a></li>
+					<h2><a href='#sobre'>Início</a></h2>
+					<h2><a href='#produtos'>Sobre</a></h2>
+					<h2><a href='#preco'>Portfólio</a></h2>
+					<h2><a href='#qualidade'>Contato</a></h2>
 				</ul>
 			</nav>
 		</div>
@@ -49,17 +49,15 @@
 </section> -->
 
 <section class='tecnologia'> 
-  <div>
-  <ul>
-      <li>Java Script</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Flexbox</li>
-      <li>Wordpress</li>
-      <li>PHP</li>
-      <li>Git/GitHub</li>
-      <li>Figma</li>
-  </ul>
+  <div class="tecnologia-item">
+      <h2>Java Script</h2>
+      <h2>HTML</h2>
+      <h2>CSS</h2>
+      <h2>Flexbox</h2>
+      <h2>Wordpress</h2>
+      <h2>PHP</h2>
+      <h2>Git/GitHub</h2>
+      <h2>Figma</h2>
   </div>
 </section>
 
@@ -67,26 +65,32 @@
   <div class='portfolio-sub'>
     <h1>FlexBlog</h1>
     <div class='portfolio-img'>
-      <img  src='img/' alt='FlexBlog'>
+      <img  src='img/flexblog.png' alt='FlexBlog'>
       <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
-    </div>
-  </div>
-
-
-  <div class='portfolio-sub'>
-    <h1>Site Curriculo</h1>
-    <div class='portfolio-img'>
-      <img  src='img/' alt='Curriculo'>
-      <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
+      <a href="#">Ver Projeto</a>
+    <a href="#">Repositório</a>
     </div>
   </div>
 
   <div class='portfolio-sub'>
     <h1>Bikcraft</h1>
     <div class='portfolio-img'>
-      <img  src='img/' alt='Bikcraft'>
+      <img  src='img/bikcraft.jpg' alt='Bikcraft'>
       <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
+      <a href="#">Ver Projeto</a>
+    <a href="#">Repositório</a>
    </div>
+  </div>
+
+  
+  <div class='portfolio-sub'>
+    <h1>Site Curriculo</h1>
+    <div class='portfolio-img'>
+      <img  src='img/.jpg' alt='Curriculo'>
+      <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
+      <a href="#">Ver Projeto</a>
+    <a href="#">Repositório</a>
+    </div>
   </div>
 
 </section>
