--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class='menu-bg'>
 		<div class='menu'>
 			<div class='menu-logo'>
-				<a href="#">C.M. Codes</a>
+				<a href="#">XlogoX</a>
 			</div>
 			<nav class='menu-nav'>
 				<ul>
@@ -25,31 +25,23 @@
 		</div>
 	</header>
 
-<section class='resume' id='dados'>
-  <div class='resume-nome'>
-      <h1>Carlos Mega</h1>
-      <h2>FRONT-END DEVELOPER & UX/UI DESIGN</h2>
-      <h3>Desenvolvendo sites na web e sistemas,<br> focados na simplicidade de resolver problemas <br>e com boa usabilidade do usuário.</h3>
-    <a href="#">Portfólio</a>
-    <a href="#">Github</a>
-  </div>
+<h1 class='introducao1'>Carlos Mega </h1>
+<h1 class='introducao2'>FRONT-END DEVELOPER & UX/UI DESIGN</h1>
 
- <!--  <div class='sobre-img'>
-    <img  src='img/sobre1.jpg' alt='Sobre 1'>
-  </div> -->
-
-</section> 
-
-<!-- <section class='sobre'> 
-    <p>Me chamo Carlos Mega, atualmente cursando Analise e Desenvolvimento de       Sistemas, especializando-se desenvolvimento Front-End e UX/UI Design.</p>
-
-    <p>A tecnologia têm um horizonte muito grande para crescer em todos os setores, me cativou a estudar sobre o assunto de forma mais aprofundada e suas aplicabilidades. Com isso estou realizando a faculdade de Análise e Desenvolvimento de Sistema e na realização de cursos específicos para compreender essas transformações constantes.</p>
-
-    <p>Criando códigos, interfaces e as possibilidades que podemos aplicar em diferentes cenários do nosso dia a dia. Pela busca da simplificação de processos, na boa usabilidade em fazer diferente e resolver problemas.</p>
-</section> -->
+<section class='sobre-all'>
+    <div class='sobre'>
+      <h1>Desenvolvendo sites na Web.<br> Buscar simplificar e resolver problemas. <br>Com boa usabilidade para o usuário.</h1>
+      <img class='sobre-img' src='img/code.jpg'>
+    </div>
+    <div class='sobre-button'>
+      <a href="#">Portfólio</a>
+      <a href="#">Github</a>
+    </div>
+</section>
 
 <section class='tecnologia'> 
   <div class="tecnologia-item">
+      <ul class='tecnologia-nav'>
       <h2>Java Script</h2>
       <h2>HTML</h2>
       <h2>CSS</h2>
@@ -58,6 +50,7 @@
       <h2>PHP</h2>
       <h2>Git/GitHub</h2>
       <h2>Figma</h2>
+      </ul>
   </div>
 </section>
 
