--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <header class='menu-bg'>
 		<div class='menu'>
 			<div class='menu-logo'>
-				<a href="#">XlogoX</a>
+        <a href="#">DevFrontWeb</a>
+        
 			</div>
 			<nav class='menu-nav'>
 				<ul>
@@ -25,18 +26,23 @@
 		</div>
 	</header>
 
-<h1 class='introducao1'>Carlos Mega </h1>
-<h1 class='introducao2'>FRONT-END DEVELOPER & UX/UI DESIGN</h1>
-
-<section class='sobre-all'>
-    <div class='sobre'>
-      <h1>Desenvolvendo sites na Web.<br> Buscar simplificar e resolver problemas. <br>Com boa usabilidade para o usuário.</h1>
-      <img class='sobre-img' src='img/code.jpg'>
+  <section class='introducao'>
+    <div>
+      <h1 class='introducao1'>Carlos Mega </h1>
+      <h1 class='introducao2'>FRONT-END DEVELOPER & UX/UI DESIGN</h1>
+      <h1 class='introducao3'>Desenvolvendo sites na Web.<br> Buscar simplificar e resolver problemas. <br>Com boa usabilidade para o usuário.</h1>
     </div>
     <div class='sobre-button'>
       <a href="#">Portfólio</a>
       <a href="#">Github</a>
     </div>
+  </section>
+
+<section class='sobre-all'>
+    <div class='sobre'>
+            <img class='sobre-img' src='img/code.jpg'>
+    </div>
+
 </section>
 
 <section class='tecnologia'> 
@@ -54,42 +60,29 @@
   </div>
 </section>
 
-<section class='portfolio'> 
-  <div class='portfolio-sub'>
-    <h1>FlexBlog</h1>
-    <div class='portfolio-img'>
-      <img  src='img/flexblog.png' alt='FlexBlog'>
-      <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
-      <a href="#">Ver Projeto</a>
-    <a href="#">Repositório</a>
-    </div>
+<section>
+<div class='portfolio'>
+  <div class='container' style="display:flex; justify-content: space-between;">
+      <p>
+          Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox
+      </p>
+      <div class='portfolio-button'>
+        <a href="#">Ver Projeto</a>
+        <a href="#">Repositório</a>
+      </div>
+      <img src="img/bikcraft.jpg">
   </div>
-
-  <div class='portfolio-sub'>
-    <h1>Bikcraft</h1>
-    <div class='portfolio-img'>
-      <img  src='img/bikcraft.jpg' alt='Bikcraft'>
-      <p>Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox</p>
-      <a href="#">Ver Projeto</a>
-    <a href="#">Repositório</a>
-   </div>
+  <div class='container' style="display:flex; justify-content: space-between;">
+      <p>
+          Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox
+      </p>
+      <img src="img/flexblog.png">
   </div>
-
-  
-  <div class='portfolio-sub'>
-    <h1>Site Curriculo</h1>
-    <div class='portfolio-img'>
-      <img  src='img/.jpg' alt='Curriculo'>
-      <p>Projeto desenvolvido para expor meu currículo na web. Utilizado HTML e CSS aplicando diferentes metodologias como grid e flexbox.</p>
-      <a href="#">Ver Projeto</a>
-    <a href="#">Repositório</a>
-    </div>
-  </div>
-
+</div>
 </section>
   
 <section class='contato'>
-  <div class='contato-info'>
+  <div class='container-img'>
   <h1>Contato</h1>
     <p> Entre em contato.</p>
     <ul> <!-- whats,linkedin,git -->
