--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<div class='menu'>
 			<div class='menu-logo'>
         <a href="#">DevFrontWeb</a>
-        
-			</div>
+        			</div>
 			<nav class='menu-nav'>
 				<ul>
 					<h2><a href='#sobre'>Início</a></h2>
@@ -31,11 +30,12 @@
       <h1 class='introducao1'>Carlos Mega </h1>
       <h1 class='introducao2'>FRONT-END DEVELOPER & UX/UI DESIGN</h1>
       <h1 class='introducao3'>Desenvolvendo sites na Web.<br> Buscar simplificar e resolver problemas. <br>Com boa usabilidade para o usuário.</h1>
+      <div class=btn>
+        <a href="#">Portfólio</a>
+        <a href="#">Github</a>
+      </div>
     </div>
-    <div class='sobre-button'>
-      <a href="#">Portfólio</a>
-      <a href="#">Github</a>
-    </div>
+      
   </section>
 
 <section class='sobre-all'>
@@ -61,24 +61,29 @@
 </section>
 
 <section>
-<div class='portfolio'>
-  <div class='container' style="display:flex; justify-content: space-between;">
-      <p>
-          Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox
-      </p>
-      <div class='portfolio-button'>
-        <a href="#">Ver Projeto</a>
-        <a href="#">Repositório</a>
-      </div>
-      <img src="img/bikcraft.jpg">
+  <div class='portfolio'>
+    <div class='container' style="display:flex; justify-content: space-between;">
+        <p>
+            Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS puro.
+        </p>
+          <div class='portfolio-btn'>
+            <a href="#">Ver Projeto</a>
+            <a href="#">Repositório</a>
+          </div>
+        <img src="img/bikcraft.jpg">
+    </div>
+
+    <div class='container' style="display:flex; justify-content: space-between;">
+        <p>
+            Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox.
+        </p>
+          <div class='portfolio-btn'>
+            <a href="#">Ver Projeto</a>
+            <a href="#">Repositório</a>
+            </div>
+        <img src="img/flexblog.png">
+    </div>
   </div>
-  <div class='container' style="display:flex; justify-content: space-between;">
-      <p>
-          Projeto desenvolvido durante o curso de CSS FlexBox Origamid. Utilizado HTML e CSS aplicando as metodologias de flexbox
-      </p>
-      <img src="img/flexblog.png">
-  </div>
-</div>
 </section>
   
 <section class='contato'>
