--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="tecnologia-item">
-        <h2>Flexbox</h2>
+        <h2>PHP</h2>
       </div>
 
       <div class="tecnologia-item">
@@ -72,11 +72,15 @@
       </div>
 
       <div class="tecnologia-item">
-        <h2>PHP</h2>
+        <h2>Flexbox</h2>
       </div>
 
       <div class="tecnologia-item">
-        <h2>Git/GitHub</h2>
+        <h2>Python</h2>
+      </div>
+
+      <div class="tecnologia-item">
+        <h2>Git/Github</h2>
       </div>
 
       <div class="tecnologia-item">
@@ -85,6 +89,7 @@
     
 </section>
 <div class='line'> </div>
+<div class='portintro'><h1>Portfólio</h1></div>
 <section class='portfolio'>
     <div class='container' >
         <p class='text'>
@@ -111,12 +116,11 @@
 </section>
   
 <section class='contato'>
+  <div class='contintro'><h1>Contatos</h1></div>
   <div class='container-img'>
-  <h1>Contato</h1>
-    <p><span></span> Entre em contato.</p>
-    <p>em construção...</p>
-    </div>
-
+    <img class='clogo' src='img/icones_rede/github-icon-png-22.jpg'>
+    <img class='clogo' src='img/icones_rede/linkedin_socialnetwork_17441.png'>
+  </div>
 </section>
 
 
