--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <section class='contato'>
   <div class='contintro'><h1>Contatos</h1></div>
   <div class='container-img'>
+    <img class='clogo' src='img/icones_rede/whatsappmessage_conversation_whatsap_7149.png'>
     <img class='clogo' src='img/icones_rede/github-icon-png-22.jpg'>
     <img class='clogo' src='img/icones_rede/linkedin_socialnetwork_17441.png'>
   </div>
