--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
     <div>
       <h1 class='introducao1'>Carlos Mega </h1>
       <h1 class='introducao2'>FRONT-END DEVELOPER & UX/UI DESIGN</h1>
-      <h1 class='introducao3'>Desenvolvendo sites na Web.<br> Buscar simplificar e resolver problemas. <br>Com boa usabilidade para o usuário.</h1>      
+      <h1 class='introducao3'>Desenvolvedor Web.<br> Atrair Simplificar Resolver  <br> Reter Diferenciar</h1>      
       <div class='btn'>
-        <a href="#">Portfólio</a>
-        <a href="#">Github</a>
+        <a href="https://medium.com/cadumegacodeds"target="_blank">Blog</a>
+        <a href="https://github.com/cadumega"target="_blank">Github</a>
         <!-- <img class='sobre-img' src='img/code.jpg'> -->
       </div>
       <div>
         
       </div>
     </div>
-
   </section>
   
 <section class='sobre-all'>
@@ -117,17 +116,17 @@
   
 <section class='contato'>
   <div class='contintro'><h1>Contatos</h1></div>
-  <div class='container-img'>
-    <img class='clogo' src='img/icones_rede/whatsappmessage_conversation_whatsap_7149.png'>
-    <img class='clogo' src='img/icones_rede/github-icon-png-22.jpg'>
-    <img class='clogo' src='img/icones_rede/linkedin_socialnetwork_17441.png'>
-  </div>
+    <div class='containerimg'>
+      <img class='clogo' src='img/icones_rede/whatsappmessage_conversation_whatsap_7149.png'>
+      <img class='clogo' src='img/icones_rede/github-icon-png-22.jpg'>
+      <a href="//www.linkedin.com/in/carlos-mega"target="_blank"><img class='clogo' src='img/icones_rede/linkedin_socialnetwork_17441.png'></a>
+    </div>
 </section>
-
 
 <footer class='footer'>
   <p>FlexBlog © Todos os direitos reservados</p>
 </footer>
+
 
 </body>
 </html>
