--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <a href="https://github.com/cadumega"target="_blank">Github</a>
         <!-- <img class='sobre-img' src='img/code.jpg'> -->
       </div>
-      <div>
-        
-      </div>
+  <!-- <div class="cadu"><img src="img/asda.png"></div> -->
     </div>
   </section>
   
